# Web-app-template

./: 404.html  Cargo.toml  README.md  client.js  index.html
src/: lib.rs
