[package]
name = "web_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.78"
tungstenite = "0.16.0"
tokio = { version = "1.16.1", features = ["macros", "rt-multi-thread"] }
tokio-postgres = "0.7.5"